# pychangelog2

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
pychangelog2/: __main__.py
