[project]
name = "pychangelog2"
version = "1.0.1"
description = "rpcclient for connecting with the rpcserver"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["git", "changelog", "version"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" },
]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/doronz88/pychangelog2"
"Bug Reports" = "https://github.com/doronz88/pychangelog2/issues"

[project.scripts]
pychangelog2 = "pychangelog2.__main__:cli"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
